src/views/Hero/component.module.css
.hero {
  --cut: 2rem;

  composes: container from "../../theme/theme.module.css";
}

.header {
  composes: header from "../../theme/theme.module.css";
}

.grid {
  display: grid;
  grid-template: 1fr / auto;

  @screen md {
    grid-template: 1fr / 1fr 1fr;
  }
}

.wrapper {
  composes: item from "../../theme/theme.module.css";
  padding: 2rem;
  border-block-end: 0;
  clip-path: polygon(var(--cut) 0, 100% 0, 100% 100%, 0 100%, 0 var(--cut));
  contain: paint;

  @screen md {
    border-block-end: 1px solid var(--jahia-border);
    border-inline-end: 0;
  }

  &::before {
    position: absolute;
    inset-block-start: 0;
    inset-inline-start: 0;
    inline-size: var(--cut);
    block-size: var(--cut);
    content: "";
    background-color: var(--jahia-border);
    clip-path: polygon(0 0, 100% 0, 0 100%);
  }
}

.image {
  object-fit: cover;
  background-color: var(--jahia-border);
  clip-path: polygon(
    0 0,
    100% 0,
    100% calc(100% - var(--cut)),
    calc(100% - var(--cut)) 100%,
    0 100%
  );

  /* On side-by-side view, nuke the native aspect-ratio of the image to fit the container. */
  @screen md {
    height: 0;
    min-height: 100%;
  }
}

